Add documentation, cleanup and renew openapi docs
